# jadeocr-next

./: .gitignore  README.md  docker-compose.debug.yml  docker-compose.yml  package.json  tmux-workspace.sh
.github/workflows/: docker-publish.yml
client/: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  prettier.config.js  tailwind.config.js  webpack.config.js
client/src/: App.vue  shims-vue.d.ts
client/src/components/: AuthForm.vue  DeckMenu.vue  Feature.vue  FeatureIcons.vue  LoadingIcon.vue  Modal.vue  Sidebar.vue  StartLink.vue
data/: dictionary.txt
data/tomoe-0.6.0/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  tomoe.pc  tomoe.pc.in
data/tomoe-0.6.0/benchmark/: Makefile.am  Makefile.in  convert-char.rb  load-dict.rb  search-by-dict.rb  search-by-recognizer.rb
data/tomoe-0.6.0/bindings/: Makefile.am  Makefile.in
data/tomoe-0.6.0/bindings/python/: Makefile.am  Makefile.in  pytomoe-utils.h  pytomoe.pc.in  tomoe-char.override  tomoe-config.override  tomoe-context.override  tomoe-dict.override  tomoe-module.c  tomoe-query.override  tomoe-reading.override  tomoe-recognizer.override  tomoe-shelf.override  tomoe-writing.override  tomoe.defs  tomoe.override
data/tomoe-0.6.0/bindings/ruby/: Makefile.am  Makefile.in  rbtomoe.h  tomoe-rb-candidate.c  tomoe-rb-char.c  tomoe-rb-config.c  tomoe-rb-context.c  tomoe-rb-dict.c  tomoe-rb-query.c  tomoe-rb-reading.c  tomoe-rb-recognizer.c  tomoe-rb-writing.c  tomoe-rb.c  tomoe-rb.h  tomoe.rb
data/tomoe-0.6.0/data/: Makefile.am  Makefile.in  config  dict.dtd  kanjidic-licence.html  kanjidic.html  kanjidic2-original.xsl  kanjidic2.html  xml2est.rb
data/tomoe-0.6.0/db/: Makefile.am  Makefile.in  config.yml.example  init.rb  migrate.rb  xml2db.rb
data/tomoe-0.6.0/db/lib/: Makefile.am  Makefile.in  char.rb  meta_datum.rb  radical.rb  reading.rb
data/tomoe-0.6.0/db/migrate/: 001_create_chars.rb  002_create_readings.rb  003_create_radicals.rb  004_create_meta_data.rb  Makefile.am  Makefile.in
data/tomoe-0.6.0/doc/: Makefile.in
data/tomoe-0.6.0/doc/reference/: Makefile.am  Makefile.in  tomoe-docs.sgml  tomoe-sections.txt  tomoe.types
data/tomoe-0.6.0/doc/reference/html/: TomoeCandidate.html  TomoeChar.html  TomoeConfig.html  TomoeContext.html  TomoeDict.html  TomoeQuery.html  TomoeReading.html  TomoeRecognizer.html  TomoeShelf.html  TomoeWriting.html  index.html  index.sgml  ix01.html  tomoe-tomoe.html  tomoe.devhelp  tomoe.devhelp2  tomoe.html
data/tomoe-0.6.0/doc/reference/tmpl/: glib-compat-file-utilities.sgml  glib-compat-key-file.sgml  tomoe-candidate.sgml  tomoe-char.sgml  tomoe-config.sgml  tomoe-context.sgml  tomoe-dict-impl.sgml  tomoe-dict.sgml  tomoe-enum-types.sgml  tomoe-module-impl.sgml  tomoe-module.sgml  tomoe-query.sgml  tomoe-reading.sgml  tomoe-recognizer-impl.sgml  tomoe-recognizer.sgml  tomoe-shelf.sgml  tomoe-unused.sgml  tomoe-writing.sgml  tomoe-xml-parser.sgml  tomoe.sgml
data/tomoe-0.6.0/doc/reference/xml/: glib-compat-file-utilities.xml  glib-compat-key-file.xml  tomoe-candidate.xml  tomoe-char.xml  tomoe-config.xml  tomoe-context.xml  tomoe-dict.xml  tomoe-enum-types.xml  tomoe-module-impl.xml  tomoe-module.xml  tomoe-query.xml  tomoe-reading.xml  tomoe-recognizer.xml  tomoe-shelf.xml  tomoe-writing.xml  tomoe-xml-parser.xml  tomoe.xml
data/tomoe-0.6.0/lib/: Makefile.am  Makefile.in  glib-compat-file-utilities.c  glib-compat-file-utilities.h  glib-compat-key-file.c  glib-compat-key-file.h  glib-utils.c  glib-utils.h  tomoe-candidate.c  tomoe-candidate.h  tomoe-char.c  tomoe-char.h  tomoe-config.c  tomoe-config.h  tomoe-context.c  tomoe-context.h  tomoe-dict-ptr-array.c  tomoe-dict-ptr-array.h  tomoe-dict.c  tomoe-dict.h  tomoe-enum-types.c  tomoe-enum-types.h  tomoe-module-impl.h  tomoe-module.c  tomoe-module.h  tomoe-query.c  tomoe-query.h  tomoe-reading.c  tomoe-reading.h  tomoe-recognizer.c  tomoe-recognizer.h  tomoe-shelf.c  tomoe-shelf.h  tomoe-writing.c  tomoe-writing.h  tomoe-xml-parser.c  tomoe-xml-parser.h  tomoe.c  tomoe.h
data/tomoe-0.6.0/macros/: python.m4  ruby.m4  svn.m4
data/tomoe-0.6.0/module/: Makefile.am  Makefile.in
data/tomoe-0.6.0/module/dict/: Makefile.am  Makefile.in  download.rb  tomoe-dict-est.c  tomoe-dict-mysql.c  tomoe-dict-ruby.c  tomoe-dict-svn.c  tomoe-dict-unihan.c  tomoe-dict-xml.c  tomoe-unihan.c  tomoe-unihan.h  unihan-compiler.rb
data/tomoe-0.6.0/module/recognizer/: Makefile.am  Makefile.in  tomoe-recognizer-simple-logic.c  tomoe-recognizer-simple-logic.h  tomoe-recognizer-simple.c
data/tomoe-0.6.0/po/: LINGUAS  POTFILES.in  ja.po
data/tomoe-0.6.0/spec/: Makefile.am  Makefile.in
data/tomoe-0.6.0/spec/miracle-linux/: Makefile.am  Makefile.in  tomoe.spec  tomoe.spec.in
data/tomoe-0.6.0/spec/turbo-linux/: Makefile.in  tomoe.spec  tomoe.spec.in
data/tomoe-0.6.0/test/: Makefile.am  Makefile.in  run-test.rb  run-tests.sh  test_char.rb  test_config.rb  test_context.rb  test_dict.rb  test_writing.rb  tomoe-test-utils.rb
data/tomoe-0.6.0/test/data/: Makefile.am  Makefile.in  aki.data  asi.data  fuyu.data  haru.data  hayashi.data  ike.data  matu.data  minami.data  natu.data  nichi.data  niku.data  one_stroke.data  su.data  test-dict.xml
data/tomoe-0.6.0/test/python/: Makefile.am  Makefile.in  runtests.py  test_candidate.py  test_char.py  test_common.py  test_config.py  test_context.py  test_dict.py  test_dict_est.py  test_dict_mysql.py  test_dict_unihan.py  test_dict_xml.py  test_query.py  test_reading.py  test_shelf.py  test_writing.py
server/: Dockerfile  app.ts  docker-compose.yml  nodemon.json  package.json  requirements.txt  tsconfig.json
server/controllers/: characterController.ts  classController.ts  deckController.ts  newUserController.js  newUserController.ts  ocr-nextController.ts  ocr.py  ocrController.ts  userController.ts
server/models/: animatedSVGModel.ts  characterModel.ts  classModel.ts  deckModel.ts  staticSVGModel.ts  userDetailedModel.ts  userModel.js  userModel.ts
server/routes/: index.ts
server/src/: app.ts
(+49 files in other folders)
